[workspace]
members = ["rs621-ratelimit"]

[workspace.package]
version = "0.7.0-alpha1"
repository = "https://github.com/nasso/rs621"
license = "MIT OR Apache-2.0"
authors = ["nasso <nassomails@gmail.com>"]
readme = "README.md"

[workspace.dependencies]
futures = { version = "0.3", default-features = false }

[package]
name = "rs621"
version.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
edition = "2018"
description = "Rust crate for the E621 API (a large online archive of furry art)."
keywords = ["e621", "e926", "furry", "api", "client"]
categories = ["api-bindings"]
exclude = ["src/mocked"]

[badges]
travis-ci = { repository = "nasso/rs621" }
codecov = { repository = "nasso/rs621" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rate-limit", "reqwest/default-tls"]
socks = ["reqwest/socks"]
rate-limit = ["rs621-ratelimit"]

[dependencies]
thiserror = "1"
url = "2"
urlencoding = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derivative = "2"
itertools = "0.10"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
rs621-ratelimit = { path = "./rs621-ratelimit", optional = true }
futures.workspace = true
serde_with = "3.11.0"
serde_repr = "0.1.19"

[dev-dependencies]
mockito = "0.30"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
